app/assets/stylesheets/pages/_home.scss
/* ... */
.mountain{
  position: absolute;
  width: 20vw;
  height: 10vw;
  bottom: 3vw;
  left: 10vw;
  background: linear-gradient(180deg, rgb(47, 0, 74) 0%, rgba(63, 0, 99, 0.5) 60%,rgba(49, 0, 99, 0.1) 90%, rgba(56,0,124,0) 100%);
  transform: scaleX(2);
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 74%,18% 78%,24% 73%,28% 78%,29% 83%,33% 88%,36% 83%, 38% 89%, 41% 94%, 47% 85%, 55% 80%, 59% 76%, 65% 74%, 68% 78%, 70% 74%, 73% 70%, 78% 68%, 85% 63%, 89% 73%, 93% 79%, 96% 84%, 99% 94%, 100% 100%) ;
}

.mountain:nth-child(1){
  bottom: 1vw;
  left: 5vw;
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 78%,18% 68%,24% 73%,28% 88%,29% 83%,33% 88%,36% 83%, 38% 94%, 41% 76%, 47% 65%, 55% 75%, 59% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 65%, 85% 70%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(2){
  bottom: 2vw;
  left: 87vw;

  clip-path: polygon(0 100%,1% 98%,4% 94%,6% 89%,8% 85%,11% 90%,16% 89%,19% 83%,23% 85%,28% 81%,29% 78%,31% 74%,34% 72%,37% 85%,40% 83%,43% 88%,46% 83%, 50% 94%, 53% 76%, 56% 65%, 58% 75%, 61% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 65%, 85% 70%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(3){
  bottom: 0;
  left: 23vw;
  background: linear-gradient(180deg, rgb(21, 10, 44) 0%, rgba(36, 15, 72, 0.7) 80%,rgba(40, 9, 95, 0.6) 90%, rgba(56,0,124,0.1) 100%);
  clip-path: polygon(0 100%, 1% 93%, 6% 85%, 10% 83%, 15% 78%, 18% 73%, 24% 73%, 28% 78%, 29% 83%, 33% 88%, 36% 83%, 38% 85%, 41% 76%, 47% 65%, 55% 75%, 59% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 75%, 85% 84%, 88% 81%, 89% 83%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(4){
  bottom: 2vw;
  left: 45vw;
  background: linear-gradient(180deg, rgb(20, 1, 60) 0%, rgba(38, 7, 91, 0.5) 80%,rgba(37,0,99,0.3) 90%, rgba(56,0,124,0) 100%);
  clip-path: polygon(0 100%, 1% 93%, 6% 85%, 10% 83%, 15% 70%, 18% 72%, 24% 80%, 28% 80%, 29% 80%, 33% 82%, 36% 87%, 38% 89%, 41% 84%, 47% 80%, 50% 82%, 55% 89%, 59% 85%, 62% 84%, 65% 87%, 68% 88%, 70% 86%, 73% 82%, 78% 79%, 85% 81%, 89% 86%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(5){
  bottom: 0;
  left: 75vw;
  clip-path: polygon(0 100%, 1% 81%, 2% 78%, 3% 75%, 4% 74%, 6% 73%, 8% 71%, 10% 72%, 12% 75%, 14% 75%, 15% 76%, 16% 77%, 17% 76%, 19% 78%, 20% 78%, 21% 78%, 23% 75%, 25% 73%, 26% 75%, 27% 76%, 28% 75%, 30% 86%, 32% 89%, 34% 93%, 35% 91%, 37% 79%, 39% 74%, 42% 75%, 44% 78%, 46% 74%, 47% 78%, 48% 74%, 50% 71%, 52% 68%, 53% 64%, 55% 60%, 58% 64%, 60% 71%, 62% 68%, 64% 64%, 65% 61%, 68% 57%, 70% 52%, 72% 56%, 73% 49%, 75% 46%, 76% 58%, 78% 63%, 80% 65%, 82% 64%, 83% 62%, 84% 58%, 85% 55%, 86% 53%, 88% 50%, 90% 47%, 91% 48%, 93% 60%, 94% 66%, 95% 70%, 96% 73%, 97% 78%, 98% 83%, 99% 89%, 100% 100%) ;
  background: rgba(0, 0, 0, 1);
}
.mountain:nth-child(6){
  bottom: 0;
  width: 40vw;
  left: 15vw;
  background: rgba(0, 0, 0, 1);
  clip-path: polygon(0 100%, 1% 81%, 2% 78%, 3% 75%, 4% 74%, 6% 43%, 7% 50%, 8% 64%, 9% 61%, 10% 60%, 11% 63%, 12% 68%, 14% 73%, 15% 76%, 16% 77%, 17% 76%, 19% 78%, 20% 78%, 21% 78%, 23% 76%, 25% 70%, 26% 75%, 27% 76%, 28% 85%, 30% 86%, 32% 91%, 34% 98%, 35% 91%, 37% 89%, 39% 94%, 42% 95%, 44% 88%, 46% 84%, 47% 88%, 48% 84%, 50% 81%, 52% 84%, 53% 84%, 55% 91%, 58% 94%, 60% 92%, 62% 86%, 64% 84%, 65% 84%, 68% 87%, 70% 92%, 72% 96%, 73% 99%, 74% 95%, 75% 86%, 76% 88%, 78% 83%, 80% 85%, 82% 84%, 83% 82%, 84% 88%, 85% 85%, 86% 83%, 88% 80%, 90% 87%, 91% 88%, 93% 80%, 94% 86%, 95% 80%, 96% 83%, 97% 88%, 98% 93%, 99% 97%, 100% 100%) ;
}


.landbox{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  width: 100vw;
  height: 90vh;
  padding-bottom: 20vh;
  overflow: hidden;
  background: black;
  opacity: 0;
  position: absolute;
  top:calc((140vh - 1px) );;
  animation-name: nonechangeone;
  animation-delay: 5s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}

.ball{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 29.3vh;
  height: 29.3vh;
  border-radius: 50%;
  background-image: radial-gradient(rgba(226, 0, 246, 0.3), rgba(168, 2, 219, 0.2), rgba(71, 33, 146, 0.1), rgba(60, 5, 75, 0.4), rgba(217, 1, 255, 0.2)), radial-gradient(rgba(246, 0, 246, 0.397), rgba(118, 2, 219, 0.247), rgba(33, 65, 146, 0.201), black 49%), radial-gradient(circle at bottom, rgba(246, 0, 246, 0.397), rgba(118, 2, 219, 0.247), rgba(33, 65, 146, 0.201), black 49%), radial-gradient(circle at top, rgba(246, 0, 246, 0.397), rgba(118, 2, 219, 0.247), rgba(33, 65, 146, 0.201), rgba(0, 0, 0, 0.256));
  animation: levitate 5s ease-in-out 10s infinite;
  border-bottom: 2px ridge rgba(205, 0, 246, 0.4);
  border-left: 1px ridge rgba(55, 11, 145, 0.4);
  border-right: 1px ridge rgba(55, 11, 145, 0.4);
}
.ballshine{
  position: absolute;
  flex-shrink: 0;
  overflow: hidden;
  width: 29vh;
  height: 29vh;
  border-radius: 50%;
  background-image: radial-gradient(circle at 50% 80%, rgba(205, 0, 246, 0.628), rgba(118, 2, 219, 0.564), rgba(33, 65, 146, 0.281), black 100%), radial-gradient(circle at top, rgba(5, 0, 70, 0.5), rgba(0, 20, 87, 0.247), rgba(45, 0, 118, 0.201), rgba(0, 0, 0, 0.256)) ;
  border-bottom: 2px ridge rgba(160, 0, 246, 0.4);
  border-left: 1px ridge rgba(246, 115, 0, 0.3);
  border-right: 1px ridge rgba(246, 115, 0, 0.3);
}
.landreflection{
  position: absolute;
  flex-shrink: 0;
  width: 59vh;
  height: 30vh;
  border-radius: 50%;
  background-image: radial-gradient(farthest-side at 50% 20%, rgba(60,4,144,0.69), rgba(49,2,219,0.3), rgba(0, 0, 0, 0.8) 62%, rgba(255,199,125,0.7) 64%, rgba(135,0,246,0.5) 80%,rgba(0, 0, 0, 0.7)),radial-gradient(circle at top, rgba(5,0,70,0.5), rgba(0,20,87,0.247), rgba(45,0,118,0.201), rgba(0,0,0,0.256));
  transform: translateX(-15vh) translateY(-0vh);
  animation: warp 5s ease-in-out 10s infinite;

}
/* ... */

